Updated GFL 2.90 to 3.40.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9019 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/BugTrap/BugTrap_9.vcproj
+++ b/BugTrap/BugTrap_9.vcproj
@@ -28,6 +28,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Pre-Building..."
+				CommandLine="copy &quot;dbghelp.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -104,6 +106,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Pre-Building..."
+				CommandLine="copy &quot;dbghelp-x64.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -187,6 +191,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Pre-Building..."
+				CommandLine="copy &quot;dbghelp.dll&quot; &quot;$(TargetDir)\dbghelp.dll&quot; /b /y"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -272,6 +278,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Pre-Building..."
+				CommandLine="copy &quot;dbghelp-x64.dll&quot; &quot;$(TargetDir)\dbghelp.dll&quot; /b /y"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
