--- a/BugTrap/BugTrap_9.vcproj
+++ b/BugTrap/BugTrap_9.vcproj
@@ -28,8 +28,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Pre-Building..."
-				CommandLine="copy &quot;dbghelp.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -95,6 +94,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Copy dbghelp.dll..."
+				CommandLine="copy &quot;dbghelp.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
 			/>
 		</Configuration>
 		<Configuration
@@ -106,8 +107,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Pre-Building..."
-				CommandLine="copy &quot;dbghelp-x64.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -179,6 +179,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Copy dbghelp.dll..."
+				CommandLine="copy &quot;dbghelp-x64.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
 			/>
 		</Configuration>
 		<Configuration
@@ -191,8 +193,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Pre-Building..."
-				CommandLine="copy &quot;dbghelp.dll&quot; &quot;$(TargetDir)\dbghelp.dll&quot; /b /y"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -266,6 +267,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Copy dbghelp.dll..."
+				CommandLine="copy &quot;dbghelp.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
 			/>
 		</Configuration>
 		<Configuration
@@ -278,8 +281,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Pre-Building..."
-				CommandLine="copy &quot;dbghelp-x64.dll&quot; &quot;$(TargetDir)\dbghelp.dll&quot; /b /y"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -359,6 +361,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Copy dbghelp.dll..."
+				CommandLine="copy &quot;dbghelp-x64.dll&quot; &quot;$(TargetDir)dbghelp.dll&quot; /b /y"
 			/>
 		</Configuration>
 	</Configurations>
